working on task

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,6 +48,10 @@
 	<string>This app need access your location in background</string>
     <key>NSLocationAlwaysUsageDescription</key>
      <key> NSLocationAlwaysAndWhenInUseUsageDescription</key>
+     <key>NSCalendarsUsageDescription</key>
+     <string>Access most functions for calendar viewing and editing.</string>
+     <key>NSContactsUsageDescription</key>
+     <string>Access contacts for event attendee editing.</string>
 	<true/>
 </dict>
 </plist>
