--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,24 +18,24 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.0
   intl: ^0.18.1
-  url_launcher: ^6.1.11
+#  url_launcher: ^6.1.11
   http: ^1.0.0
   persistent_bottom_nav_bar_v2: ^4.2.8
   shared_preferences: ^2.1.2
   provider: ^6.0.5
   smooth_page_indicator: ^1.0.0+2
   carousel_slider: ^4.2.1
-  dropdown_search: ^5.0.6
+#  dropdown_search: ^5.0.6
   share_plus: ^6.3.0
-  syncfusion_flutter_charts: ^21.2.10
+#  syncfusion_flutter_charts: ^21.2.10
   loading_animation_widget: ^1.2.0+4
-  shimmer: ^3.0.0
-  rive: ^0.11.6
+#  shimmer: ^3.0.0
+#  rive: ^0.11.6
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   cached_network_image: ^3.2.3
   location: ^5.0.3
-  geolocator: ^10.0.1
+#  geolocator: ^10.0.1
   manage_calendar_events: ^2.0.2
 
 
