--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   hive_flutter: ^1.1.0
   cached_network_image: ^3.2.3
   location: ^5.0.3
+  flutter_local_notifications: ^15.1.1
 #  geolocator: ^10.0.1
   manage_calendar_events: ^2.0.2
 
